Fix Pantheon install example

--- a/server/pantheon-install.sh.example
+++ b/server/pantheon-install.sh.example
@@ -8,7 +8,7 @@ PROFILE="hedley"
 
 MAKE_DIR="/var/www/hedley"
 PANTHEON_DIR="/var/www/pantheon-hedley"
-PANTHEON_ALIAS="@pantheon.hedley.dev"
+PANTHEON_ALIAS="@pantheon.ihangane.dev"
 
 # Some variable definitions
 BOLD=`tput bold`
