--- a/client/bower.json
+++ b/client/bower.json
@@ -12,7 +12,6 @@
   ],
   "dependencies": {
     "copy-button": "sudodoki/copy-button#2.0.0",
-    "offline": "0.7.18",
-    "semantic": "semantic-ui#2.2.7"
+    "offline": "0.7.18"
   }
 }
