--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ env:
 services:
 - docker
 before_install:
+- openssl aes-256-cbc -K $encrypted_414fa4dd00a5_key -iv $encrypted_414fa4dd00a5_iv
+  -in gdrive-service-account.json.enc -out gdrive-service-account.json -d
 - export PATH="$HOME/.config/composer/vendor/bin:$PATH"
 - "([ ! -z $BUILD_WEBDRIVERIO ] && sudo pip install docker-compose) || :"
 install:
