ported https://github.com/Gizra/drupal-elm-starter/pull/143

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "browser-sync": "2.18.2",
     "del": "1.2.1",
+    "elm-test": "0.18.2",
     "gulp": "3.9.1",
     "gulp-autoprefixer": "2.3.1",
     "gulp-cache": "0.2.10",
@@ -45,5 +46,7 @@
   "engines": {
     "node": ">0.10.0"
   },
-  "scripts": {}
+  "scripts": {
+    "test": "elm-test src/elm/TestRunner.elm"
+  }
 }
