more elegant random generated floats

--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "browser-sync": "2.18.2",
+    "chance": "1.0.4",
     "del": "1.2.1",
     "elm-test": "0.18.2",
     "gulp": "3.9.1",
