--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "description": "Generated elm",
   "dependencies": {
+    "sw-precache": "^5.2.0",
     "webdriverio": "^4.6.2"
   },
   "devDependencies": {
