Cherry-pick basic Rollbar code from #725

--- a/client/bower.json
+++ b/client/bower.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "copy-button": "sudodoki/copy-button#2.0.0",
     "dropzone": "5.1.1",
-    "offline": "0.7.18"
+    "offline": "0.7.18",
+    "dexie": "2.0.4"
   }
 }
