--- a/client/bower.json
+++ b/client/bower.json
@@ -14,6 +14,7 @@
     "copy-button": "sudodoki/copy-button#2.0.0",
     "dropzone": "5.1.1",
     "offline": "0.7.18",
-    "dexie": "2.0.4"
+    "dexie": "2.0.4",
+    "semantic": "semantic-ui#2.2.1"
   }
 }
