Try configuring docker with a self-signed SSL cert.

--- a/ci-scripts/docker_files/server.conf
+++ b/ci-scripts/docker_files/server.conf
@@ -2,3 +2,11 @@
     DocumentRoot /var/www/html/Server/server/www
     ServerName server.local
 </VirtualHost>
+
+<VirtualHost *:443>
+    DocumentRoot /var/www/html/Server/server/www
+    ServerName server.local
+    SSLEngine on
+    SSLCertificateFile /etc/apache2/ssl/server.crt
+    SSLCertificateKeyFile /etc/apache2/ssl/server.key
+</VirtualHost>
