Revert "Try configuring docker with a self-signed SSL cert."
This reverts commit 2dfc3ea4003f24090f15e17ebbfc613b59dc41e8.

--- a/ci-scripts/docker_files/Dockerfile
+++ b/ci-scripts/docker_files/Dockerfile
@@ -7,4 +7,4 @@ WORKDIR /var/www/html/Server
 RUN chmod +x /var/www/html/Server/ci-scripts/docker_files/run.sh
 ENTRYPOINT ["/var/www/html/Server/ci-scripts/docker_files/run.sh"]
 
-EXPOSE 80 443 3306 22
+EXPOSE 80 3306 22
