--- a/client/package.json
+++ b/client/package.json
@@ -4,54 +4,54 @@
   "version": "0.1.0",
   "description": "Generated elm",
   "dependencies": {
-    "sw-precache": "^5.2.0",
-    "webdriverio": "^4.6.2"
+    "sw-precache": "^5.2.1",
+    "webdriverio": "^5.9.1"
   },
   "devDependencies": {
-    "browser-sync": "2.18.2",
-    "chance": "1.0.4",
-    "csv-parse": "^1.2.4",
-    "del": "1.2.1",
+    "browser-sync": "^2.26.5",
+    "chance": "^1.0.18",
+    "csv-parse": "^4.4.1",
+    "del": "^4.1.1",
     "elm-test": "^0.18.12",
     "git-rev": "^0.2.1",
-    "gulp": "3.9.1",
-    "gulp-autoprefixer": "2.3.1",
-    "gulp-cache": "0.2.10",
-    "gulp-cached": "1.0.1",
-    "gulp-changed": "1.0.0",
-    "gulp-elm": "0.6.1",
-    "gulp-filter": "2.0.2",
-    "gulp-gh-pages": "0.5.4",
-    "gulp-gzip": "0.0.8",
-    "gulp-htmlmin": "0.2.0",
-    "gulp-if": "2.0.2",
-    "gulp-imagemin": "2.3.0",
-    "gulp-jshint": "1.11.2",
-    "gulp-load-plugins": "0.8.1",
-    "gulp-minify-css": "0.3.13",
-    "gulp-plumber": "1.0.1",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^2.3.1",
+    "gulp-cache": "^0.2.10",
+    "gulp-cached": "^1.0.1",
+    "gulp-changed": "^1.0.0",
+    "gulp-elm": "^0.6.1",
+    "gulp-filter": "^2.0.2",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-gzip": "^0.0.8",
+    "gulp-htmlmin": "^0.2.0",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-jshint": "^1.11.2",
+    "gulp-load-plugins": "^0.8.1",
+    "gulp-minify-css": "^0.3.13",
+    "gulp-plumber": "^1.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-rev-all": "0.7.6",
-    "gulp-rev-replace": "0.3.4",
-    "gulp-sass": "2.1.0",
-    "gulp-sequence": "0.4.1",
-    "gulp-shell": "0.2.11",
-    "gulp-size": "1.3.0",
+    "gulp-rev-all": "^0.7.6",
+    "gulp-rev-replace": "^0.3.4",
+    "gulp-sass": "^2.1.0",
+    "gulp-sequence": "^0.4.1",
+    "gulp-shell": "^0.2.11",
+    "gulp-size": "^1.3.0",
     "gulp-transform": "^3.0.5",
-    "gulp-uglify": "1.4.1",
-    "gulp-uncss": "0.5.2",
-    "gulp-useref": "1.3.0",
-    "jshint-stylish": "1.0.2",
-    "merge-stream": "0.1.8",
+    "gulp-uglify": "^1.4.1",
+    "gulp-uncss": "^0.5.2",
+    "gulp-useref": "^1.3.0",
+    "jshint-stylish": "^2.2.1",
+    "merge-stream": "^2.0.0",
     "vinyl-source-stream": "^2.0.0",
-    "wdio-browserstack-service": "0.1.4",
-    "wdio-mocha-framework": "0.5.8",
-    "wdio-selenium-standalone-service": "0.0.9",
-    "wdio-spec-reporter": "0.0.5",
-    "wiredep": "2.2.2"
+    "wdio-browserstack-service": "^0.1.18",
+    "wdio-mocha-framework": "^0.6.4",
+    "wdio-selenium-standalone-service": "^0.0.12",
+    "wdio-spec-reporter": "^0.1.5",
+    "wiredep": "^4.0.0"
   },
   "engines": {
-    "node": ">0.10.0"
+    "node": ">10.0"
   },
   "scripts": {
     "test": "gulp zscore && gulp version && elm-test"
