--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "description": "Generated elm",
   "dependencies": {
     "sw-precache": "^5.2.1",
+    "elm": "^0.19.0-no-deps",
+    "include-media": "^1.4.9",
     "webdriverio": "^5.9.1"
   },
   "devDependencies": {
@@ -15,32 +17,35 @@
     "elm-test": "^0.18.12",
     "git-rev": "^0.2.1",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^2.3.1",
-    "gulp-cache": "^0.2.10",
-    "gulp-cached": "^1.0.1",
-    "gulp-changed": "^1.0.0",
-    "gulp-elm": "^0.6.1",
-    "gulp-filter": "^2.0.2",
-    "gulp-gh-pages": "^0.5.4",
-    "gulp-gzip": "^0.0.8",
-    "gulp-htmlmin": "^0.2.0",
+    "gulp-autoprefixer": "^6.1.0",
+    "gulp-cache": "~1.1.1",
+    "gulp-cached": "^1.1.1",
+    "gulp-changed": "^3.2.0",
+    "gulp-elm": "^0.8.1",
+    "gulp-filter": "^5.1.0",
+    "gulp-gh-pages": "0.5.4",
+    "gulp-gzip": "1.4.2",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^2.3.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-load-plugins": "^0.8.1",
-    "gulp-minify-css": "^0.3.13",
-    "gulp-plumber": "^1.0.1",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-jshint": "^2.1.0",
+    "gulp-load-plugins": "^1.5.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.2.2",
-    "gulp-rev-all": "^0.7.6",
-    "gulp-rev-replace": "^0.3.4",
-    "gulp-sass": "^2.1.0",
-    "gulp-sequence": "^0.4.1",
-    "gulp-shell": "^0.2.11",
-    "gulp-size": "^1.3.0",
+    "gulp-rev-all": "^1.0.0",
+    "gulp-rev-replace": "^0.4.4",
+    "gulp-sass": "^4.0.2",
+    "gulp-sequence": "^1.0.0",
+    "gulp-shell": "^0.7.0",
+    "gulp-size": "^3.0.0",
+    "gulp-svgmin": "^2.2.0",
+    "gulp-svgstore": "^7.0.1",
+    "gulp-terser": "^1.1.7",
     "gulp-transform": "^3.0.5",
-    "gulp-uglify": "^1.4.1",
-    "gulp-uncss": "^0.5.2",
-    "gulp-useref": "^1.3.0",
+    "gulp-useref": "^3.1.6",
+    "gulp-util": "^3.0.7",
+    "install": "^0.12.2",
     "jshint-stylish": "^2.2.1",
     "merge-stream": "^2.0.0",
     "vinyl-source-stream": "^2.0.0",
