--- a/server/.ddev/config.yaml
+++ b/server/.ddev/config.yaml
@@ -24,7 +24,7 @@ hooks:
     - exec: drush en devel views_ui -y
     - exec: drush uli
   post-start:
-    - exec: drush site-install -y hedley install_configure_form.update_status_module='array(FALSE,FALSE)' --locale=en --account-name="admin" --account-pass="admin" --account-mail="admin@example.com" --db-url=mysql://db:db@db/db --uri="https://ihangane.ddev.site:4443"
+    # - exec: drush site-install -y hedley install_configure_form.update_status_module='array(FALSE,FALSE)' --locale=en --account-name="admin" --account-pass="admin" --account-mail="admin@example.com" --db-url=mysql://db:db@db/db --uri="https://ihangane.ddev.site:4443"
     - exec: drush en devel views_ui -y
     - exec: drush uli
 
