--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ php:
 env:
   matrix:
   - BUILD_SERVER=1
-  - BUILD_CLIENT=1
+  # - BUILD_CLIENT=1
   - CODE_REVIEW=1 REVIEW_STANDARD="Drupal"
   - CODE_REVIEW=1 REVIEW_STANDARD="DrupalPractice"
   - SHELL_REVIEW=1
