--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,6 @@
   "description": "Generated elm",
   "dependencies": {
     "sw-precache": "^5.2.1",
-    "elm": "^0.19.0-no-deps",
     "include-media": "^1.4.9",
     "webdriverio": "^5.9.1"
   },
@@ -56,9 +55,7 @@
     "wdio-spec-reporter": "^0.1.5",
     "wiredep": "^4.0.0"
   },
-  "engines": {
-    "node": ">10.0"
-  },
+  "engines": {},
   "scripts": {
     "test": "gulp zscore && gulp version && elm-test"
   }
