--- a/server/pantheon.yml
+++ b/server/pantheon.yml
@@ -1,13 +1,15 @@
 api_version: 1
 
 workflows:
-  clone_database:
-    after:
-      - type: webphp
-        description: Sanitize the db
-        script: scripts/pantheon/db_sanitization.php
   sync_code:
     after:
       - type: webphp
         description: Revert all features after pushing code
         script: scripts/pantheon/revert_all_features.php
+# This is commented out to prevent automatic db clone when
+# deploying from DEV to TEST.
+#  clone_database:
+#    after:
+#      - type: webphp
+#        description: Sanitize the db
+#        script: scripts/pantheon/db_sanitization.php
