--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "Generated elm",
   "dependencies": {
-    "sw-precache": "^5.2.1",
+    "workbox-build": "^4.3.1",
     "webdriverio": "^5.9.1"
   },
   "devDependencies": {
