--- a/.travis.yml
+++ b/.travis.yml
@@ -26,13 +26,20 @@ before_install:
 jobs:
   include:
     - stage: Lint
-      name: "Shell coding standard: PhpCs"
+      name: "Drupal coding standard: PhpCs"
+      env:
+        - REVIEW_STANDARD="Drupal"
+    - stage: Lint
+      name: "Drupal Practice coding standard: PhpCs"
+      env:
+        - REVIEW_STANDARD="DrupalPractice"
       script:
         - "$TRAVIS_BUILD_DIR/ci-scripts/install_coder.sh"
         - "$TRAVIS_BUILD_DIR/ci-scripts/test_coder.sh"
     - stage: Lint
       name: "Elm coding standard: Elm Format"
       script:
+        - "$TRAVIS_BUILD_DIR/ci-scripts/install_elm_format.sh"
         - "$TRAVIS_BUILD_DIR/ci-scripts/test_elm_format.sh"
     - stage: Lint
       name: "Drupal coding standard: Shellcheck"
