--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ jobs:
         - "$TRAVIS_BUILD_DIR/ci-scripts/test_client.sh"
     - stage: Deploy
       name: "Deployment to Pantheon"
-      if: branch = develop
+      if: branch = develop && commit_message ~= [deploy]
       env:
         - PANTHEON_ENV=qa
         - PANTHEON_BRANCH=qa
