--- a/.travis.yml
+++ b/.travis.yml
@@ -66,11 +66,12 @@ jobs:
       if: branch = develop && commit_message ~= [deploy]
       env:
         - PANTHEON_ENV=qa
+        - PANTHEON_DIR=/tmp/pantheon-ihangane
         - PANTHEON_BRANCH=qa
         - MAIN_REPO_BRANCH=develop
       script:
         - "$TRAVIS_BUILD_DIR/ci-scripts/prepare_deploy.sh"
-        - /tmp/pantheon-ihangane/deploy-to-env.sh"
+        - "$TRAVIS_BUILD_DIR/server/pantheon-update.sh"
 
 cache:
   directories:
