--- a/server/scripts/build
+++ b/server/scripts/build
@@ -30,6 +30,7 @@ source "$ROOT"/scripts/helper-colors.sh
 # Build the profile itself.
 (
   cd $PROFILE_NAME
+  pwd
   $DRUSH make --no-core --contrib-destination drupal-org.make .
 
   # Cleanup profile folder
