--- a/server/scripts/build
+++ b/server/scripts/build
@@ -30,8 +30,7 @@ source "$ROOT"/scripts/helper-colors.sh
 # Build the profile itself.
 (
   cd $PROFILE_NAME
-  pwd
-  $DRUSH make --no-core --contrib-destination drupal-org.make .
+  $DRUSH make --no-core --contrib-destination "$ROOT/$PROFILE_NAME/drupal-org.make" .
 
   # Cleanup profile folder
   if [ -d ./1 ]; then
