--- a/server/.ddev/config.yaml
+++ b/server/.ddev/config.yaml
@@ -15,6 +15,8 @@ provider: default
 use_dns_when_possible: true
 timezone: ""
 hooks:
+  pre-start:
+    - exec-host: "chmod +x ./scripts/build && ./scripts/build"
   post-import-db:
     # Sanitize email addresses
     - exec: drush sqlq "UPDATE users SET mail = concat(mail, '.test') WHERE uid > 0
@@ -26,10 +28,16 @@ hooks:
   post-start:
     - exec: drush site-install -y hedley install_configure_form.update_status_module='array(FALSE,FALSE)' --locale=en --account-name="admin" --account-pass="admin" --account-mail="admin@example.com" --db-url=mysql://db:db@db/db --uri="https://ihangane.ddev.site:4443"
     - exec: drush en devel views_ui -y
+    - exec: composer install -d sites/default/files/composer
+    - exec: drush en -y hedley_migrate
+    - exec: drush en -y migrate migrate_ui migrate_extras
+    - exec: drush mi --group=default --user=1
+    - exec: drush mi --group=counseling --user=1
+    - exec: drush mi --group=forms --user=1
     - exec: drush uli
 
 
-# This config.yaml was created with ddev version v1.11.2 
+# This config.yaml was created with ddev version v1.11.2
 # webimage: drud/ddev-webserver:v1.11.0
 # dbimage: drud/ddev-dbserver:v1.11.0-10.2
 # dbaimage: drud/phpmyadmin:v1.11.0
@@ -62,7 +70,7 @@ hooks:
 # router_https_port: <port> # Port for https (defaults to 443)
 
 # xdebug_enabled: false  # Set to true to enable xdebug and "ddev start" or "ddev restart"
-# Note that for most people the commands 
+# Note that for most people the commands
 # "ddev exec enable_xdebug" and "ddev exec disable_xdebug" work better,
 # as leaving xdebug enabled all the time is a big performance hit.
 
@@ -70,7 +78,7 @@ hooks:
 
 # timezone: Europe/Berlin
 # This is the timezone used in the containers and by PHP;
-# it can be set to any valid timezone, 
+# it can be set to any valid timezone,
 # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 # For example Europe/Dublin or MST7MDT
 
@@ -92,14 +100,14 @@ hooks:
 # working_dir:
 #   web: /var/www/html
 #   db: /home
-# would set the default working directory for the web and db services. 
-# These values specify the destination directory for ddev ssh and the 
-# directory in which commands passed into ddev exec are run. 
+# would set the default working directory for the web and db services.
+# These values specify the destination directory for ddev ssh and the
+# directory in which commands passed into ddev exec are run.
 
 # omit_containers: ["dba", "ddev-ssh-agent"]
 # would omit the dba (phpMyAdmin) and ddev-ssh-agent containers. Currently
 # only those two containers can be omitted here.
-# Note that these containers can also be omitted globally in the 
+# Note that these containers can also be omitted globally in the
 # ~/.ddev/global_config.yaml or with the "ddev config global" command.
 
 # nfs_mount_enabled: false
@@ -107,7 +115,7 @@ hooks:
 # See https://ddev.readthedocs.io/en/stable/users/performance/#using-nfs-to-mount-the-project-into-the-container
 
 # webcache_enabled: false (deprecated)
-# Was only for macOS, but now deprecated. 
+# Was only for macOS, but now deprecated.
 # See https://ddev.readthedocs.io/en/stable/users/performance/#using-webcache_enabled-to-cache-the-project-directory
 
 # host_https_port: "59002"
@@ -139,8 +147,8 @@ hooks:
 # Extra Debian packages that are needed in the dbimage can be added here
 
 # use_dns_when_possible: true
-# If the host has internet access and the domain configured can 
-# successfully be looked up, DNS will be used for hostname resolution 
+# If the host has internet access and the domain configured can
+# successfully be looked up, DNS will be used for hostname resolution
 # instead of editing /etc/hosts
 # Defaults to true
 
@@ -151,13 +159,13 @@ hooks:
 # pre-v1.9 behavior.
 
 # ngrok_args: --subdomain mysite --auth username:pass
-# Provide extra flags to the "ngrok http" command, see 
+# Provide extra flags to the "ngrok http" command, see
 # https://ngrok.com/docs#http or run "ngrok http -h"
 
 # provider: default # Currently either "default" or "pantheon"
 #
-# Many ddev commands can be extended to run tasks before or after the 
-# ddev command is executed, for example "post-start", "post-import-db", 
+# Many ddev commands can be extended to run tasks before or after the
+# ddev command is executed, for example "post-start", "post-import-db",
 # "pre-composer", "post-composer"
 # See https://ddev.readthedocs.io/en/stable/users/extending-commands/ for more
 # information on the commands that can be extended and the tasks you can define
