--- a/server/.ddev/db-build/Dockerfile.example
+++ b/server/.ddev/db-build/Dockerfile.example
@@ -1,6 +1,6 @@
 
 # You can copy this Dockerfile.example to Dockerfile to add configuration
 # or packages or anything else to your dbimage
-ARG BASE_IMAGE=drud/ddev-dbserver:v1.11.0-10.2
+ARG BASE_IMAGE=drud/ddev-dbserver-mariadb-10.2:v1.13.0
 FROM $BASE_IMAGE
-RUN echo "Built from drud/ddev-dbserver:v1.11.0-10.2" >/var/tmp/built-from.txt
+RUN echo "Built from drud/ddev-dbserver-mariadb-10.2:v1.13.0" >/var/tmp/built-from.txt
