--- a/.travis.yml
+++ b/.travis.yml
@@ -65,8 +65,9 @@ jobs:
     - stage: Deploy
       name: "Deployment to Pantheon"
       if: branch = 1535-deploy
-      env:
       script:
+        - "$TRAVIS_BUILD_DIR/ci-scripts/prepare_client.sh"
+        - "$TRAVIS_BUILD_DIR/ci-scripts/install_client.sh"
         - "$TRAVIS_BUILD_DIR/ci-scripts/install_ddev.sh"
         - "$TRAVIS_BUILD_DIR/ci-scripts/prepare_deploy.sh"
         - "ddev robo deploy:pantheon qa"
