--- a/.travis.yml
+++ b/.travis.yml
@@ -65,7 +65,7 @@ jobs:
       name: "Deployment to Pantheon"
       if: branch = 1535-deploy
       script:
-        - "$TRAVIS_BUILD_DIR/ci-scripts/install_client.sh"
+        - "export DEPLOY=1 && $TRAVIS_BUILD_DIR/ci-scripts/install_client.sh"
         - "$TRAVIS_BUILD_DIR/ci-scripts/install_ddev.sh"
         - "$TRAVIS_BUILD_DIR/ci-scripts/prepare_deploy.sh"
         - "cd $TRAVIS_BUILD_DIR/server && ddev robo deploy:pantheon qa"
