--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,7 @@ jobs:
         - "$TRAVIS_BUILD_DIR/ci-scripts/test_server.sh"
     - stage: Test
       name: "Client-side"
+      if: commit_message ~= [test client]
       script:
         - "$TRAVIS_BUILD_DIR/ci-scripts/install_client.sh"
         - "$TRAVIS_BUILD_DIR/ci-scripts/test_client.sh"
