--- a/.travis.yml
+++ b/.travis.yml
@@ -56,6 +56,14 @@ jobs:
       script:
         - "$TRAVIS_BUILD_DIR/ci-scripts/install_client.sh"
         - "$TRAVIS_BUILD_DIR/ci-scripts/test_client.sh"
+    - stage: Deploy
+      name: "Deployment to Pantheon"
+      if: branch = develop
+      script:
+        - "export DEPLOY=1 && $TRAVIS_BUILD_DIR/ci-scripts/install_client.sh"
+        - "$TRAVIS_BUILD_DIR/ci-scripts/install_ddev.sh"
+        - "$TRAVIS_BUILD_DIR/ci-scripts/prepare_deploy.sh"
+        - "cd $TRAVIS_BUILD_DIR/server && ddev robo deploy:pantheon qa --no-interaction"
 cache:
   directories:
   - client/elm-stuff/packages
