--- a/client/bower.json
+++ b/client/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "Hedley",
+  "name": "hedley",
   "homepage": "https://github.com/Gizra/hedley",
   "authors": [],
   "description": "Hedley",
