--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,14 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_414fa4dd00a5_key -iv $encrypted_414fa4dd00a5_iv
   -in deployment-robot-key.enc -out deployment-robot-key -d
 - export PATH="$HOME/.config/composer/vendor/bin:$HOME/vendor/bin:$PATH"
+# Here we switch to a Google-powered Docker image mirror.
+# There were often failures and very long retry loops with
+# the built-in registry mirror provided by Docker.
+- tmpdaemon=$(mktemp)
+- sudo jq '."registry-mirrors" = ["http://docker.gizra.com"]' /etc/docker/daemon.json > $tmpdaemon
+- sudo mv $tmpdaemon /etc/docker/daemon.json
+- sudo systemctl daemon-reload
+- sudo systemctl restart docker
 
 jobs:
   include:
