--- a/.ddev/.gitignore
+++ b/.ddev/.gitignore
@@ -1,24 +1,27 @@
 #ddev-generated: Automatically generated ddev .gitignore.
 # You can remove the above line if you want to edit and maintain this file yourself.
+/.gitignore
 
-/commands/*/*.example
-/commands/*/README.txt
-/commands/host/launch
-/commands/web/xdebug
-/commands/db/mysql
-/homeadditions/*.example
-/homeadditions/README.txt
-/import.yaml
+/**/*.example
+/.dbimageBuild
+/.dbimageExtra
 /.ddev-docker-*.yaml
 /.*downloads
-/db_snapshots
-/sequelpro.spf
-/import-db
-/config.*.y*ml
+/.global_commands
+/.homeadditions
+/.sshimageBuild
 /.webimageBuild
-../.ddev/.dbimageBuild/
-../.ddev/.sshimageBuild/
-../.ddev/.gitignore
 /.webimageExtra
-/.dbimageExtra
-/*-build/Dockerfile.example
+/apache/apache-site.conf
+/commands/.gitattributes
+/commands/db/mysql
+/commands/host/launch
+/commands/web/live
+/commands/web/xdebug
+/config.*.y*ml
+/db_snapshots
+/import-db
+/import.yaml
+/nginx_full/nginx-site.conf
+/sequelpro.spf
+/**/README.*
