--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,7 @@
     "chance": "^1.0.18",
     "csv-parse": "^4.4.1",
     "del": "^4.1.1",
-    "elm-test": "^0.18.12",
+    "elm-test": "^0.19.1-revision6",
     "git-rev": "^0.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^6.1.0",
