--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -1,7 +1,7 @@
 name: ihangane
 type: drupal7
 docroot: server/www
-php_version: "7.2"
+php_version: "7.3"
 webserver_type: nginx-fpm
 router_http_port: "8081"
 router_https_port: "4443"
@@ -15,9 +15,9 @@ composer_version: "1"
 web_environment: []
 
 
-# This config.yaml was created with ddev version v1.17.0
-# webimage: drud/ddev-webserver:v1.17.0
-# dbimage: drud/ddev-dbserver-mariadb-10.3:v1.17.0
+# This config.yaml was created with ddev version v1.17.7
+# webimage: drud/ddev-webserver:v1.17.7
+# dbimage: drud/ddev-dbserver-mariadb-10.3:v1.17.7
 # dbaimage: phpmyadmin:5
 # However we do not recommend explicitly wiring these images into the
 # config.yaml as they may break future versions of ddev.
@@ -55,6 +55,11 @@ web_environment: []
 # Note that for most people the commands
 # "ddev xdebug" to enable xdebug and "ddev xdebug off" to disable it work better,
 # as leaving xdebug enabled all the time is a big performance hit.
+
+# xhprof_enabled: false  # Set to true to enable xhprof and "ddev start" or "ddev restart"
+# Note that for most people the commands
+# "ddev xhprof" to enable xhprof and "ddev xhprof off" to disable it work better,
+# as leaving xhprof enabled all the time is a big performance hit.
 
 # webserver_type: nginx-fpm  # or apache-fpm
 
@@ -158,7 +163,7 @@ web_environment: []
 # In this case the user must provide all such settings.
 
 # You can inject environment variables into the web container with:
-# web_environment: 
+# web_environment:
 # - SOMEENV=somevalue
 # - SOMEOTHERENV=someothervalue
 
@@ -168,8 +173,6 @@ web_environment: []
 # This is to enable experimentation with alternate file mounting strategies.
 # For advanced users only!
 
-# provider: default # Currently "default", "pantheon", "ddev-live"
-# 
 # Many ddev commands can be extended to run tasks before or after the
 # ddev command is executed, for example "post-start", "post-import-db",
 # "pre-composer", "post-composer"
