--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -14,6 +14,8 @@ tasks:
     command: |
       .ddev/gitpod-setup-ddev.sh
       ddev composer install
+      nohup ddev gulp &
+      gp await-port 3000 && gp preview $(gp url 3000)
       gp await-port 8888 && gp preview $(gp url 8888)
 # VScode xdebug extension
 vscode:
