--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -8,10 +8,13 @@ tasks:
     init: |
       export DDEV_NONINTERACTIVE=true
       .ddev/gitpod-setup-ddev.sh
-    command: |
-      .ddev/gitpod-setup-ddev.sh
       cp .ddev/config.local.yaml.example .ddev/config.local.yaml
       ddev restart
+      ddev drush sql-dump > db.sql
+    command: |
+      rm .ddev/config.local.yaml
+      cat db.sql > ddev drush sql-cli
+      ddev start
       ddev client-install
       nohup ddev gulp &
       gp await-port 3000 && gp preview $(gp url 3000)
