--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,16 +7,15 @@ tasks:
   - name: Terminal
     init: |
       export DDEV_NONINTERACTIVE=true
-      .ddev/gitpod-setup-ddev.sh
       cp .ddev/config.local.yaml.example .ddev/config.local.yaml
-      ddev restart
-      ddev drush sql-dump > db.sql
-    command: |
-      rm .ddev/config.local.yaml
-      cat db.sql > ddev drush sql-cli
       ddev start
       ddev client-install
+    command: |
+      export DDEV_NONINTERACTIVE=true
+      .ddev/gitpod-setup-ddev.sh
+      rm .ddev/config.local.yaml
       nohup ddev gulp &
+      export DDEV_NONINTERACTIVE=false
       gp await-port 3000 && gp preview $(gp url 3000)
       gp await-port 8888 && gp preview $(gp url 8888)
 # VScode xdebug extension
