--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -16,7 +16,8 @@ tasks:
       rm .ddev/config.local.yaml
       export DDEV_NONINTERACTIVE=true
       .ddev/gitpod-setup-ddev.sh
-      nohup ddev gulp &
+      ddev gulp elm || (sleep 1 && ddev gulp elm)
+      nohup ddev gulp serve:dev &
       export DDEV_NONINTERACTIVE=false
       gp await-port 8888 && gp preview $(gp url 8888)
       gp await-port 3000 && gp preview $(gp url 3000)
