--- a/.ddev/config.local.yaml.example
+++ b/.ddev/config.local.yaml.example
@@ -13,6 +13,7 @@ hooks:
     - exec: wget https://ftp.drupal.org/files/projects/registry_rebuild-7.x-2.5.tar.gz
     - exec: tar -xvf registry_rebuild-7.x-2.5.tar.gz --directory ~/.drush
     - exec: rm registry_rebuild-7.x-2.5.tar.gz
+    - exec: drush cc all
     - exec: drush rr
     - exec: drush cc all
     - exec: drush en devel views_ui field_ui -y
