--- a/.ddev/config.local.yaml.example
+++ b/.ddev/config.local.yaml.example
@@ -26,7 +26,7 @@ hooks:
     # the gitignore, during the install process, it gets altered, so we restore
     # it to avoid having untracked files.
     - exec: "git checkout .gitignore"
-    - exec: drush site-install -y hedley install_configure_form.update_status_module='array(FALSE,FALSE)' --locale=en --account-name="admin" --account-pass="admin" --account-mail="admin@example.com" --db-url=mysql://db:db@db/db --uri="https://ihangane.ddev.site:4443"
+    - exec: drush site-install -y hedley install_configure_form.update_status_module='array(FALSE,FALSE)' --locale=en --account-name="admin" --account-pass="admin" --account-mail="admin@example.com" --db-url=mysql://db:db@db/db --uri="https://eheza-app.ddev.site:4443"
     - exec: drush en devel views_ui field_ui -y
     - exec: drush fra -y
     - exec: composer install -d sites/default/files/composer
